# ETH-Barcelona

./: README.md
backend/: README.md  data.json  main.py  output.json  pyproject.toml  result.json
backend/data/: denial_of_service.sol  incorrect_interface.sol
backend/scrap/: ajna.md  eigen.md
backend/src/: chatgpt_extend.py  specify_model.py
backend/storage/: docstore.json  index_store.json  vector_store.json
frontend/smart_audit/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/smart_audit/components/: Formulario.js  Menu.js  Result.js  SimpleForm.js  SubmitSmartContract.js  TwoFilesUpload.js  aiResults.js  req.tsx
frontend/smart_audit/pages/: _app.tsx  index.tsx  user.js  user.tsx
frontend/smart_audit/public/: index.html
frontend/smart_audit/styles/: globals.css
frontend/smart_audit/utils/: requestNet.ts
